objects/HealthCloudGA__CarePlanTemplateGoal__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanTemplateProblem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Problem</label>
        <referenceTo>HealthCloudGA__CarePlanTemplateProblem__c</referenceTo>
        <relationshipLabel>Care Plan Template Goals</relationshipLabel>
        <relationshipName>CarePlanTemplateGoals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan Template</label>
        <referenceTo>HealthCloudGA__CarePlanTemplate__c</referenceTo>
        <relationshipLabel>Care Plan Template Goals</relationshipLabel>
        <relationshipName>Care_Plan_Template_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cognition Improvement</fullName>
                </value>
                <value>
                    <fullName>Weight Management</fullName>
                </value>
                <value>
                    <fullName>Muscle Strength Improvement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Care Plan Template Goal</label>
    <nameField>
        <label>Care Plan Template Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Plan Template Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>HealthCloudGA__ValidateCarePlanGoalAssociation</fullName>
        <active>true</active>
        <description>Associate the goal with either a care plan template or problem</description>
        <errorConditionFormula>AND( ISBLANK( HealthCloudGA__CarePlanTemplate__c ), ISBLANK( HealthCloudGA__CarePlanTemplateProblem__c ) )</errorConditionFormula>
        <errorMessage>Associate the goal with either a care plan template or problem.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HealthCloudGA__ValidateCarePlanGoalAssociationForSingle</fullName>
        <active>true</active>
        <description>Associate the goal with only one record</description>
        <errorConditionFormula>AND( NOT(ISBLANK( HealthCloudGA__CarePlanTemplateProblem__c )), NOT(ISBLANK( HealthCloudGA__CarePlanTemplate__c )) )</errorConditionFormula>
        <errorMessage>Associate the goal with only one record.</errorMessage>
    </validationRules>
</CustomObject>